--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chang restaurant</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    
     <header>
+
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="./about.html">About my restaurant</a></li>
-               <H1>
+               <h1 style="color:rgb(235, 60, 11);">
                 Hello, welcome to Chang restaurant for chinese food
-               </H1> 
+               </h1> 
                <img src="https://img.freepik.com/premium-vector/chinese-food-isolated-flat-cartoon-illustration-icon-isolated-white-noodles-box-original-recipe-chopsticks-wok-noodles-chinese-food-logo_92289-504.jpg?w=740" width="400" alt=""> 
             </ul>
         </nav>
